modify: thay đổi cấu trúc thư mục, viết readme