@@ -1,46 +1,41 @@
-#  An Internet Media Store
+#  Mẫu thiết kế phần mềm - Design Pattern
 <p align="center">
-  <img src="src/main/resources/assets/images/aims_cover_image.png" />
+  <img src="sourcecode/src/main/resources/assets/images/aims_cover_image.png" />
 </p>
 
-## Getting Started
+## Danh sách thành viên - Member infomation
 
-Welcome to the AIMS project. Here is a guideline to help you get started.
+Nhóm 03
+1. Nguyễn Đình Hùng - 20183548
+2. Phạm Trung Hiếu - 20183535
+3. Phạm Hữu Anh Quốc - 20183616
+4. Nguyễn Minh Tuân - 20183652
 
-## Folder Structure
+## Phân công nhiệm vụ - Assignment
 
-The workspace contains the following folders, where:
+**1. Phát hiện, xử lý các vấn đề cohesion / coupling / SOLID / clean code:**
+Chia theo subteam: 
+- Hiếu + Tuân: common + controller + dao + entity
+- Hùng + Quốc: subsystem + utils + views.screen
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
-- `test`: the folder for testing purpose
+**2. Thay đổi trong tương lai:**
+- **Số 1: Thêm mặt hàng Media mới: AudioBook**
+Hùng + Quốc
 
-## Dependency Management
-### Working with Eclipse
-Import the root directory of this repository after cloning under `Eclipse` -> `Open Projects from File System...` or by using EGit.
+- **Số 2: Thêm màn hình: Xem chi tiết sản phẩm**
+Hùng + Hiếu
 
-### SQLite
-Import `sqlite-jdbc-3.7.2.jar` in `lib` under `Eclipse` -> `Project` -> `Properties` -> `Java Build Path` -> `Classpath` -> `Add JARs...`.
+- **Số 3: Thay đổi yêu cầu khi load giao diện**
+Hiếu + Tuân
 
+- **Số 4 + 6: Thay đổi cách tính khoảng cách, sử dụng thư viện mới; thay đổi cách tính khoảng cách, sử dụng thư viện mới**
+Hiếu + Hùng
 
-### JUnit
-Import `JUnit5` library under `Eclipse` -> `Project` -> `Properties` -> `Java Build Path` -> `Modulepath` -> `Add Library...` -> `JUnit` -> `Next`.
+- **Số 5: Thêm phương thức thanh toán mới: Thẻ nội địa (Domestic Card)**
+Tuân + Quốc
 
-### JavaFX
-**Note:** At first, please try to run the project once, and then follow these steps.
-1. Create a new `User Library` under `Eclipse` -> `Window` -> `Preferences` -> `Java` -> `Build Path` -> `User Libraries` -> `New`
-2. Name it anything you want, e.g., `JavaFX15`, and include the ***jars*** under either the `lib/linux/javafx-sdk-15` directory for Linux distro or the `lib/win/javafx-sdk-15` directory for Windows in the project.
-3. Include the library, e.g., `JavaFX15`, into the classpath.
+- **Số 7: Cập nhật lại chức năng hủy đơn hàng**
+Hùng + Hiếu
 
-### Add VM arguments
-Click on `Run` -> `Run Configurations...`  -> `Java Application`, create a new launch configuration for your project and add these VM arguments:
-- For Linux distro: 
-> `--module-path lib/linux/javafx-sdk-15 --add-modules javafx.controls,javafx.fxml`
-- For Windows:
-> `--module-path lib/win/javafx-sdk-15 --add-modules javafx.controls,javafx.fxml`
-
-## Author
-- nguyenlm - Software Engeneering Student - k61
-- manhvd   - Software Engeneering Student - k61
-- hieudm   - ICT - k61
-- thanhld  - ICT - k62
+**3. Vẽ biểu đồ:** Hùng + Hiếu
+**4. Làm báo cáo:** Hùng
